examples/test/testpolicy5587.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5587
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key6: value34
      key49: value0
      key45: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value47
          key7: value30
          key48: value3
      podSelector:
        matchLabels:
          key37: value16
